feat: enable SEO optimization on pages by adding missing tags

--- a/content/HowSqlJoinsWorks.html
+++ b/content/HowSqlJoinsWorks.html
@@ -4,6 +4,7 @@ description: "Learn the basics of joins in SQL queries. This blog aims to provid
 author: "Ekalaivan Chidambaram"
 slug: "howsqljoinsworks"
 url: "how-sql-joins-works"
+icon: "/images/icon.jpg"
 aliases: 
   - "howjoinsworks.html"
 keywords: 
