--- a/content/LoggingCookieAspNetCore.html
+++ b/content/LoggingCookieAspNetCore.html
@@ -4,6 +4,7 @@ description: "Learn how to log cookies in ASP.NET Core applications for debuggin
 author: "Ekalaivan Chidambaram"
 slug: "logging-authentication-cookies-send-or-received-by-clients-in-aspnetcore"
 url: "logging-authentication-cookies-send-or-received-by-clients-in-aspnetcore"
+icon: "/images/icon.jpg"
 aliases: 
   - "logging-authentication-cookies-send-or-received-by-clients-in-aspnetcore.html"
 keywords: 
