--- a/content/MyDevTools.html
+++ b/content/MyDevTools.html
@@ -4,6 +4,7 @@ description: "Explore a curated list of essential developer tools for .NET devel
 author: "Ekalaivan Chidambaram"
 slug: "mydevtools2023"
 url: "my-dev-tools-2023"
+icon: "/images/icon.jpg"
 aliases: 
   - "mydevtools.html"
 keywords: 
