--- a/content/PostgresqlJsonbReading.html
+++ b/content/PostgresqlJsonbReading.html
@@ -8,6 +8,7 @@ aliases:
   - "reading-postgresql-jsonb-to-dotnet-complex-types.html"
 slug: "reading-postgresql-jsonb-to-dotnet-complex-types"
 description: "Learn how to store and access JSONB data in PostgreSQL databases using Dapper into DotNet complex types."
+icon: "/images/icon.jpg"
 keywords: 
   - "PostgreSQL"
   - "Dapper"
