fix: add config toml file to resolve the site map not rendering correctly

--- a/content/_index.html
+++ b/content/_index.html
@@ -2,7 +2,7 @@
 title: "Ekalaivan Chidambaram - Senior .NET Full Stack Developer Blog"
 description: "Explore expert insights, tutorials, and tips on .NET Full Stack Development, including ASP.NET Core, Blazor, Postgresql, and more."
 author: "Ekalaivan Chidambaram"
-url: "/"
+url: ""
 aliases:
   - "/home"
   - "/index"
