feat: add new blog related to Hugo generating new site

--- a/content/_index.html
+++ b/content/_index.html
@@ -95,6 +95,21 @@ layout: "homepage"
           </p>
         </a>
       </li>
+
+      <li>
+        <a class="text-reset text-decoration-none" href="/plan-your-hugo-site-beginners-idea">
+          <strong>
+            How to plan your hugo site with multiple pages a beginers introduction
+          </strong>
+
+          <p class="pt-3 font-monospace text-decoration-none">
+            Creating a Hugo site from scratch can feel overwhelming at first, but 
+            with a clear plan and understanding of its structure, it becomes much easier. 
+            This guide is designed to help beginners get started with Hugo, plan their site, 
+            and manage multiple pages effectively.
+          </p>
+        </a>
+      </li>
     </ul>
   </div>
 </article>
