feat: add newspaper way of coding blog

--- a/content/_index.html
+++ b/content/_index.html
@@ -110,6 +110,20 @@ layout: "homepage"
           </p>
         </a>
       </li>
+
+      <li>
+        <a class="text-reset text-decoration-none" href="/why-newspapers-use-columns-writing-better-code">
+          <strong>
+            Why Newspapers Use Columns — And What That Teaches Us About Writing Better Code
+          </strong>
+
+          <p class="pt-3 font-monospace text-decoration-none">
+            Ever wondered why newspapers are laid out in narrow columns instead of full-width rows?
+            Discover how newspaper design principles apply to writing cleaner, more readable code.
+            Learn best practices that make your code easier to understand and maintain.
+          </p>
+        </a>
+      </li>
     </ul>
   </div>
 </article>
