fix heading font size

--- a/content/MyDevTools.html
+++ b/content/MyDevTools.html
@@ -73,9 +73,9 @@ draft: false
 
   <div class="row">
     <div class="col-md-4">
-      <h3 class="mt-3">
+      <h4 class="mt-3">
         Programming
-      </h3>
+      </h4>
       <ul>
         <li>LinqPad / Roslyn Pad</li>
         <li>VS Code</li>
@@ -92,7 +92,7 @@ draft: false
     </div>
     
     <div class="col-md-4">
-      <h3 class="mt-3">Windows</h3>
+      <h4 class="mt-3">Windows</h4>
       <ul>
         <li>Everything</li>
         <li>Key Pirinha</li>
@@ -108,7 +108,7 @@ draft: false
     </div>
 
     <div class="col-md-4">
-      <h3 class="mt-3">Others</h3>
+      <h4 class="mt-3">Others</h4>
       <ul>
         <li>Notion</li>
         <li>Powershell</li>
@@ -123,9 +123,7 @@ draft: false
     </div>
   </div>
   
-  <h3 class="mt-3">
-    <strong>LinqPad</strong>
-  </h3>
+  <h4 class="mt-3">LinqPad</h4>
 
   <p>
     This is a simple tool to execute C#, F#, VB codes as single Line of
@@ -156,9 +154,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Visual Studio Code</strong>
-  </h3>
+  <h4 class="mt-4">Visual Studio Code</h4>
   
   <p>
     Visual Studio Code (VS Code) has gained immense popularity as a
@@ -177,9 +173,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Visual Studio</strong>
-  </h3>
+  <h4 class="mt-4">Visual Studio</h4>
   
   <p>
     For more extensive .NET development, I rely on different versions of
@@ -199,9 +193,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Postman</strong>
-  </h3>
+  <h4 class="mt-4">Postman</h4>
 
   <p>
     Postman is an indispensable tool for testing and debugging APIs. With
@@ -222,9 +214,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Fiddler</strong>
-  </h3>
+  <h4 class="mt-4">Fiddler</h4>
 
   <p>
     Fiddler is a powerful web debugging proxy that enables me to analyze,
@@ -244,9 +234,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>DBeaver</strong>
-  </h3>
+  <h4 class="mt-4">DBeaver</h4>
 
   <p>
     DBeaver is a universal database client that supports various database
@@ -266,9 +254,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>DB Browser for SQLite</strong>
-  </h3>
+  <h4 class="mt-4">DB Browser for SQLite</h4>
 
   <p>
     DB Browser for SQLite is a lightweight, open-source tool specifically
@@ -288,9 +274,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>GitHub</strong>
-  </h3>
+  <h4 class="mt-4">GitHub</h4>
 
   <p>
     GitHub has become the de facto platform for version control and
@@ -310,9 +294,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Sublime Merge</strong>
-  </h3>
+  <h4 class="mt-4">Sublime Merge</h4>
 
   <p>
     Sublime Merge is a Git client that offers a sleek and intuitive
@@ -332,9 +314,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Beyond Comparer</strong>
-  </h3>
+  <h4 class="mt-4">Beyond Comparer</h4>
 
   <p>
     Beyond Compare is a versatile file and folder comparison tool that
@@ -353,9 +333,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>ILSpy</strong>
-  </h3>
+  <h4 class="mt-4">ILSpy</h4>
 
   <p>
     ILSpy is a powerful open-source .NET assembly browser and de-compiler.
@@ -374,9 +352,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Everything</strong>
-  </h3>
+  <h4 class="mt-4">Everything</h4>
 
   <p>
     Everything is a lightning-fast file search utility for Windows. With
@@ -397,9 +373,7 @@ draft: false
     </a>
   </p>
   
-  <h3 class="mt-4">
-    <strong>Key Pirinha</strong>
-  </h3>
+  <h4 class="mt-4">Key Pirinha</h4>
 
   <p>
     Key Pirinha, also known as Keypirinha, is a fast and flexible
@@ -420,9 +394,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>EyeLeo</strong>
-  </h3>
+  <h4 class="mt-4">EyeLeo</h4>
 
   <p>
     EyeLeo is a helpful tool for preventing eye strain and promoting
@@ -442,9 +414,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>AutoHotkey</strong>
-  </h3>
+  <h4 class="mt-4">AutoHotkey</h4>
 
   <p>
     AutoHotkey is a powerful scripting language and automation tool for
@@ -464,9 +434,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>ShareX</strong>
-  </h3>
+  <h4 class="mt-4">ShareX</h4>
 
   <p>
     ShareX is an open-source screen capture and productivity tool that
@@ -486,9 +454,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Microsoft Edge</strong>
-  </h3>
+  <h4 class="mt-4">Microsoft Edge</h4>
 
   <p>
     Microsoft Edge, the modern web browser from Microsoft, has evolved
@@ -509,9 +475,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>7-Zip</strong>
-  </h3>
+  <h4 class="mt-4">7-Zip</h4>
 
   <p>
     7-Zip is a free and open-source file archiver that supports various
@@ -531,9 +495,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Bitwarden</strong>
-  </h3>
+  <h4 class="mt-4">Bitwarden</h4>
 
   <p>
     Bitwarden is a secure and cross-platform password manager that helps
@@ -553,9 +515,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Windows PowerToys</strong>
-  </h3>
+  <h4 class="mt-4">Windows PowerToys</h4>
 
   <p>
     Windows PowerToys is a collection of utilities developed by Microsoft
@@ -576,9 +536,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Notion</strong>
-  </h3>
+  <h4 class="mt-4">Notion</h4>
 
   <p>
     Notion is an all-in-one workspace that combines note-taking, project
@@ -599,9 +557,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>PowerShell</strong>
-  </h3>
+  <h4 class="mt-4">PowerShell/Terminal</h4>
 
   <p>
     PowerShell is a command-line shell and scripting language developed by
@@ -622,9 +578,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Obsidian</strong>
-  </h3>
+  <h4 class="mt-4">Obsidian</h4>
 
   <p>
     Obsidian is a powerful knowledge management and note-taking
@@ -646,9 +600,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Sublime Text</strong>
-  </h3>
+  <h4 class="mt-4">Sublime Text</h4>
 
   <p>
     Sublime Text is a highly customizable and lightweight text editor that
@@ -668,9 +620,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Vim</strong>
-  </h3>
+  <h4 class="mt-4">Vim</h4>
 
   <p>
     Vim is a text editor known for its powerful editing capabilities and
@@ -691,9 +641,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>OBS Studio</strong>
-  </h3>
+  <h4 class="mt-4">OBS Studio</h4>
 
   <p>
     OBS Studio (Open Broadcaster Software Studio) is an open-source
@@ -714,9 +662,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Windows Subsystem for Linux (WSL)</strong>
-  </h3>
+  <h4 class="mt-4">Windows Subsystem for Linux (WSL)</h4>
 
   <p>
     Windows Subsystem for Linux (WSL) is a compatibility layer that
@@ -736,9 +682,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>Windows Ransomware Protection</strong>
-  </h3>
+  <h4 class="mt-4">Windows Ransomware Protection</h4>
 
   <p>
     Windows Ransomware Protection is a built-in security feature in
@@ -760,9 +704,7 @@ draft: false
     </a>
   </p>
 
-  <h3 class="mt-4">
-    <strong>NimbleText</strong>
-  </h3>
+  <h4 class="mt-4">NimbleText</h4>
 
   <p>
     NimbleText is a text manipulation tool with pattern-based rules. It
